--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
-  mongodb:
-    image: mongo
-    container_name: mongo_container
+  mongo:
+    image: mongo:4.4.4
+    container_name: mongo
     restart: always
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
@@ -10,5 +10,4 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - ./mongo-data:/data/db
-    command: --wiredTigerCacheSizeGB 1.5
+      - ./mongo-data-4.4:/data/db
