--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@typegoose/typegoose": "^11.4.1",
-    "mongoose": "^7.4.5",
+    "mongoose": "^7.4.4",
     "nestjs-typegoose": "^7.1.38",
+    "npm-install-peers": "^1.2.2",
+    "pnpm": "^8.6.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
