Типы параметров POST и PATCH запросов в контроллере и сервисе Movies описаны с помощью DTO. Приемен ValidationPipe() для валидации входных данных и автоматического преобразования параметров строки браузера (из string в number).

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,37 @@ lerna-debug.log*
 !.vscode/launch.json
 !.vscode/extensions.json
 /mongo-data/
+/mongo-data-4.4/_mdb_catalog.wt
+/mongo-data-4.4/collection-0-6973141693769374721.wt
+/mongo-data-4.4/collection-2-6973141693769374721.wt
+/mongo-data-4.4/collection-4-6973141693769374721.wt
+/mongo-data-4.4/collection-6-6973141693769374721.wt
+/mongo-data-4.4/index-1-6973141693769374721.wt
+/mongo-data-4.4/index-3-6973141693769374721.wt
+/mongo-data-4.4/index-5-6973141693769374721.wt
+/mongo-data-4.4/index-7-6973141693769374721.wt
+/mongo-data-4.4/index-8-6973141693769374721.wt
+/mongo-data-4.4/index-9-6973141693769374721.wt
+/mongo-data-4.4/diagnostic.data/metrics.2023-08-24T14-54-50Z-00000
+/mongo-data-4.4/diagnostic.data/metrics.2023-08-24T14-55-07Z-00000
+/mongo-data-4.4/diagnostic.data/metrics.2023-08-24T14-59-36Z-00000
+/mongo-data-4.4/diagnostic.data/metrics.2023-08-24T19-27-44Z-00000
+/mongo-data-4.4/diagnostic.data/metrics.2023-08-27T05-59-32Z-00000
+/mongo-data-4.4/diagnostic.data/metrics.2023-08-29T07-57-56Z-00000
+/mongo-data-4.4/diagnostic.data/metrics.interim
+/mongo-data-4.4/mongod.lock
+/src/movies/movies.controller.spec.ts
+/src/movies/movies.controller.ts
+/src/movies/movies.service.spec.ts
+/src/movies/movies.service.ts
+/package-lock.json
+/mongo-data-4.4/sizeStorer.wt
+/mongo-data-4.4/storage.bson
+/mongo-data-4.4/WiredTiger
+/mongo-data-4.4/WiredTiger.lock
+/mongo-data-4.4/WiredTiger.turtle
+/mongo-data-4.4/WiredTiger.wt
+/mongo-data-4.4/WiredTigerHS.wt
+/mongo-data-4.4/journal/WiredTigerLog.0000000006
+/mongo-data-4.4/journal/WiredTigerPreplog.0000000001
+/mongo-data-4.4/journal/WiredTigerPreplog.0000000002
