--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@typegoose/typegoose": "^11.4.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mongoose": "^7.4.4",
     "nestjs-typegoose": "^7.1.38",
     "npm-install-peers": "^1.2.2",
