--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "dev": "nodemon",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -28,8 +29,10 @@
     "@typegoose/typegoose": "^11.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "module-alias": "^2.2.3",
     "mongoose": "^7.4.4",
     "nestjs-typegoose": "^7.1.38",
+    "nodemon": "^3.0.1",
     "npm-install-peers": "^1.2.2",
     "pnpm": "^8.6.12",
     "reflect-metadata": "^0.1.13",
@@ -74,5 +77,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "_moduleAliases": {
+    "@app": "./dist"
   }
 }
