В docker-compose.yml добавлен сервис Postgres. Начата разработка API для проекта Real World. Сгенерированы модуль и контроллер Tags.

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@
  MONGO_HOST=localhost
  MONGO_PORT=27017
  MONGO_AUTH_DATABASE=admin
+
+ POSTGRES_DB_NAME=purple
+ POSTGRES_DB_USERNAME=scool
+ POSTGRES_DB_PASSWORD=learning
