--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,25 @@ services:
   mongo:
     image: mongo:4.4.4
     container_name: mongo
-    restart: always
+    restart: "unless-stopped"
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=admin
     ports:
-      - 27017:27017
+      - "27017:27017"
     volumes:
       - ./mongo-data-4.4:/data/db
+  postgres:
+    image: "postgres:15.3-alpine3.18"
+    container_name: postgres_container
+    restart: "unless-stopped"
+    environment:
+      - POSTGRES_DB=$POSTGRES_DB_NAME
+      - POSTGRES_USER=$POSTGRES_DB_USERNAME
+      - POSTGRES_PASSWORD=$POSTGRES_DB_PASSWORD
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./postgres:/var/lib/postgresql/data
+
+
