--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
     "@typegoose/typegoose": "^11.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -34,9 +35,11 @@
     "nestjs-typegoose": "^7.1.38",
     "nodemon": "^3.0.1",
     "npm-install-peers": "^1.2.2",
+    "pg": "^8.11.3",
     "pnpm": "^8.6.12",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
