--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typegoose/typegoose": "^11.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "module-alias": "^2.2.3",
     "mongoose": "^7.4.4",
     "nestjs-typegoose": "^7.1.38",
