--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "orm": "npx typeorm-ts-node-commonjs  -d ./src/configs/postgres.config.ts",
+    "orm:generate": "npm run orm -- migration:generate ./src/migrations/migration",
+    "orm:create": "npm run orm -- migration:create ./src/migrations/migration",
+    "orm:run": "npm run orm -- migration:run",
+    "orm:revert": "npm run orm -- migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
