--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "orm": "npx typeorm-ts-node-commonjs  -d ./src/configs/postgres.config.ts",
-    "orm:generate": "npm run orm -- migration:generate ./src/migrations/migration",
-    "orm:create": "npm run orm -- migration:create ./src/migrations/migration",
-    "orm:run": "npm run orm -- migration:run",
-    "orm:revert": "npm run orm -- migration:revert"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "mg:create": "typeorm migration:create ./src/migrations/migration",
+    "typeorm_ts": "npx typeorm-ts-node-commonjs  -d ./src/configs/postgres.config.ts",
+    "mg:generate": "npm run typeorm_ts -- migration:generate ./src/migrations/migration",
+    "mg:run": "npm run typeorm_ts -- migration:run",
+    "mg:revert": "npm run typeorm_ts -- migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
