--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs",
-    "mg:create": "typeorm migration:create ./src/migrations/migration",
+    "mg:create": "typeorm migration:create ./migrations/migration",
     "typeorm_ts": "npx typeorm-ts-node-commonjs  -d ./src/configs/postgres.config.ts",
-    "mg:generate": "npm run typeorm_ts -- migration:generate ./src/migrations/migration",
+    "mg:generate": "npm run typeorm_ts -- migration:generate ./migrations/migration",
     "mg:run": "npm run typeorm_ts -- migration:run",
     "mg:revert": "npm run typeorm_ts -- migration:revert"
   },
